--- a/storm_data.Rmd
+++ b/storm_data.Rmd
@@ -1,6 +1,6 @@
 Reproducible Research: Peer Assessment 2
 ==========================================
-krishna acharya
+JOEL CORONADO
 
 ## Impact of Severe Weather Events on Public Health and Economy in the United States
 
